--- a/src/app/components/admin/detail-build-admin/detail-build-admin.component.scss
+++ b/src/app/components/admin/detail-build-admin/detail-build-admin.component.scss
@@ -31,10 +31,10 @@
 
 }
 
-.conteiner-buttons>* {
+/* .conteiner-buttons>* {
     // background-color: var(--ion-color-primary);
 
-}
+} */
 
 .conteiner-phases {
     padding: 1%
@@ -43,6 +43,16 @@
 .flex-img>.item {
     align-self: flex-end
 }
+
+.color-complete {
+    color: var(--ion-color-success);
+}
+
+.color-incomplete {
+
+    color: var(--ion-color-warning);
+}
+
 
 @media (max-width: 900px) {
     .flex-img>* {
