--- a/src/app/components/admin/main-admin/main-admin.component.scss
+++ b/src/app/components/admin/main-admin/main-admin.component.scss
@@ -1,4 +1,15 @@
 //   
+.filters-buttons-conteiner {
+    display: flex;
+    justify-content: flex-end;
+    margin: 1% 3% 0% 0%;
+
+}
+
+
+
+
+
 .desktop-card {
     height: 100% !important;
 }
