--- a/src/app/components/buyer/credit-event-buyer/credit-event-buyer.component.html
+++ b/src/app/components/buyer/credit-event-buyer/credit-event-buyer.component.html
@@ -117,7 +117,7 @@
           <ion-card-content text-wrap>
             <ion-label text-wrap>Detalles de la cita : {{schedule.note}}</ion-label>
             <ion-list lines="none">
-              <ion-item lines="none" text-wrap> Fecha: {{schedule.day}}/{{schedule.month}}/{{schedule.year}}</ion-item>
+              <ion-item lines="none" text-wrap> Fecha: {{schedule.day}}/{{schedule.month + 1}}/{{schedule.year}}</ion-item>
               <ion-item lines="none" text-wrap>Hora: {{formatHours(schedule.hour, schedule.minute)}}</ion-item>
             </ion-list>
           </ion-card-content>
@@ -144,7 +144,7 @@
           <ion-card-content text-wrap>
             <ion-label text-wrap>Detalles de la cita : {{schedule.note}}</ion-label>
             <ion-list lines="none">
-              <ion-item lines="none" text-wrap> Fecha: {{schedule.day}}/{{schedule.month}}/{{schedule.year}}</ion-item>
+              <ion-item lines="none" text-wrap> Fecha: {{schedule.day}}/{{schedule.month + 1}}/{{schedule.year}}</ion-item>
               <ion-item lines="none" text-wrap>Hora: {{formatHours(schedule.hour, schedule.minute)}} </ion-item>
             </ion-list>
           </ion-card-content>
