--- a/src/app/components/admin/main-admin/main-admin.component.scss
+++ b/src/app/components/admin/main-admin/main-admin.component.scss
@@ -2,6 +2,7 @@
 .filters-buttons-conteiner {
     display: flex;
     justify-content: flex-end;
+    flex-wrap: wrap;
     margin: 1% 3% 0% 0%;
 
 }
