--- a/src/app/components/buyer/new-buyer/new-buyer.component.html
+++ b/src/app/components/buyer/new-buyer/new-buyer.component.html
@@ -128,8 +128,8 @@
               <ion-label>
                 Soltero
               </ion-label>
-              <ion-toggle [(ngModel)]="newBuyer.isSingle" #isSingle="ngModel" id="isSingle" name="isSingle" required
-                mode="md" slot="end"></ion-toggle>
+              <ion-toggle [(ngModel)]="newBuyer.isSingle" #isSingle="ngModel" id="isSingle" name="isSingle" mode="md"
+                slot="end"></ion-toggle>
             </ion-item>
 
             <!-- tipo de propiedad
